<resources>
    <string name="app_name">TaskApp</string>

    <!-- Login Fragment -->
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Recover & Register Fragment -->
    <string name="create_account">Create Account</string>
    <string name="send_email">Send Email</string>
    <string name="provide_email_for_password_recovery">Please provide your email to receive a password recovery email</string>

    <!-- Home Fragment -->
    <string name="toDo">To Do</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="title_dialog_confirm_logout">Do you want to sign out of your account?</string>
    <string name="text_message_logout">Please confirm if you want to sign out.</string>

    <!-- FormTask Fragment -->
    <string name="save">Save</string>
    <string name="insert_task_description">Insert task description</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="add_task">Add task</string>
    <string name="provide_task_description">Insert task description.</string>

    <!-- Titles -->
    <string name="create_account_title">Create Account</string>
    <string name="recover_account_title">Recover Account</string>
    <string name="create_new_task_title">Create New Task</string>

    <!-- To Do Fragment -->
    <string name="title_dialog_confirm_delete">Do you want to delete this task?</string>
    <string name="text_message_confirm_delete">Please confirm if you want to delete it.</string>

    <!-- Firebase Authentication Errors -->
    <string name="auth_account_not_registered">Account not registered.</string>
    <string name="auth_invalid_email">The e-mail address is incorrectly formatted.</string>
    <string name="auth_invalid_password">The given password is invalid. Try again.</string>
    <string name="auth_email_already_registered">This e-mail is already registered.</string>
    <string name="auth_require_stronger_password">Please provide a stronger password.</string>


    <!-- Generic -->
    <string name="warning">Warning</string>
    <string name="provide_email">Please, insert your e-mail.</string>
    <string name="ok">OK</string>
    <string name="provide_password">Please insert your password.</string>
    <string name="insert_a_valid_email">Insert a valid email.</string>
    <string name="provide_a_password">Provide a password.</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="text_message_recover_fragment">Done, we\'ve sent you an email with information to recover your account.</string>
    <string name="error_task_creation_message">Error occurred. Task creation failed.</string>
    <string name="text_task_list_empty">There are no tasks registered.</string>
    <string name="text_task_list_load">Please wait, we are loading your information.</string>
    <string name="error_generic">An error occurred! Please try again later.</string>
    <string name="task_deleted_successfully">Task deleted successfully.</string>
    <string name="title_button_confirm">Confirm</string>
    <string name="toolbar_editing_task">Editing task</string>
    <string name="task_saved_successfully">Task saved successfully.</string>
    <string name="task_modified_successfully">Task modified successfully.</string>
    <string name="task_updated_successfully">Task updated successfully.</string>


</resources>