<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/smaller_margin"
        android:layout_marginVertical="@dimen/default_margin"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_margin"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="@+id/btn_task_details"
                app:layout_constraintEnd_toEndOf="@+id/txt_description"
                app:layout_constraintTop_toTopOf="@+id/btn_task_details" />

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_margin"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="@+id/btn_remove_task"
                app:layout_constraintStart_toStartOf="@+id/txt_description"
                app:layout_constraintTop_toTopOf="@+id/btn_remove_task"
                app:tint="@color/color_default" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:maxLines="1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Task description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_remove_task"
                android:layout_width="62dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_button"
                android:text="@string/remove"
                android:padding="0dp"
                android:textSize="11sp"
                app:backgroundTint="@color/color_delete"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit_task"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit_task"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_task" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_task"
                android:layout_width="62dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginVertical="32dp"
                android:padding="0dp"
                android:background="@drawable/bg_button"
                android:text="@string/edit"
                android:textSize="11sp"
                app:backgroundTint="@color/color_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_task_details"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_remove_task"
                app:layout_constraintTop_toBottomOf="@+id/txt_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_task_details"
                android:layout_width="62dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/color_details"
                android:padding="0dp"
                android:text="@string/details"
                android:textSize="11sp"
                app:backgroundTint="@color/color_details"
                app:layout_constraintBottom_toBottomOf="@+id/btn_edit_task"
                app:layout_constraintEnd_toStartOf="@+id/btn_forward"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_edit_task"
                app:layout_constraintTop_toTopOf="@+id/btn_edit_task" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>